# voice-assistent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: bark_tts_01.ipynb  pyaudio_01.ipynb  whisper_01.ipynb
