[tool.poetry]
name = "voice-assistent"
version = "0.1.0"
description = "Project proposed for Pycamp 2024 Spain."
authors = ["Ezequiel Bernatene <ebernatene@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.1.7"
openai-whisper = "^20231117"
ipykernel = "^6.29.3"
pathlib = "^1.0.1"
matplotlib = "^3.8.3"
pyaudio = "^0.2.14"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
black = "^24.2.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
